ansible/roles/k3s_apps/files/website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: homelab
  labels:
    app: website
spec:
  selector:
    app: website
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
