ansible/roles/k3s_apps/files/website/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: www.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
    - host: homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
